Fix styling for video and description cards on mobile devices (landing page)

--- a/public/sass/home.scss
+++ b/public/sass/home.scss
@@ -9,6 +9,9 @@
 //body {
 //	margin: 0;
 //}
+nav.navbar {
+	border: none;
+}
 
 nav.header-expanded {
 	background-color: rgba($body-bg, 0.6);
@@ -26,15 +29,13 @@ nav.header-expanded {
 #landing {
 	padding: 0;
 	margin-right: 0;
-	margin-left: -17px;
+	//margin-left: -17px;
 }
 
 #titleVideo {
 	object-fit: cover;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
-	top: 0;
-	left: 0;
 }
 
 .title {
@@ -43,10 +44,11 @@ nav.header-expanded {
 	top: 72%;
 	max-width: 40rem;
 	padding: 16px;
+	background: rgba($body-bg, 0.4);
 	border-radius: $radius-container;
 
 	h1 {
-		filter: drop-shadow(0px 0px 7px $body-bg);
+		//filter: drop-shadow(0px 0px 7px $body-bg);
 	}
 }
 
@@ -64,9 +66,10 @@ nav.header-expanded {
 .description-grid {
 	margin-top: 50px;
 	margin-bottom: 50px;
+	--bs-gutter-x: 0;
 
 	.grid-item {
-		margin-left: 7%;
+		padding: 3.5%;
 
 		.form-group {
 			h4 {
