--- a/public/sass/small.scss
+++ b/public/sass/small.scss
@@ -78,6 +78,11 @@
 		margin-bottom: 20px;
 	}
 
+	.title {
+		left: 1%;
+		max-width: 23rem;
+	}
+
 	.form-group {
 		width: 100%;
 	}
